2014-06-22 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: new macros MOD_RIVET_CORE and RIVET_CHANNEL. Macro APACHE_VERSION preserved but not 
    called anymore
    * rivet/init.tcl.in: Add template for rivet/init.tcl
    * src/Makefile.am: building mod_rivet with code entirely selected by autoconf defined symbols
    * src/apache-2/mod_rivet.c: comments added. Rivet package version depends now on preprocessor
     symbol RIVET_TCL_PACKAGE_VERSION

2014-06-10 Massimo Manghi <mxmanghi@apache.org>
    * tests/rivet.test: removed lang.test as it was testing just a tautology

2014-06-04 Massimo Manghi <mxmanghi@apache.org>
    * doc/images/color-table.png, doc/xml/examples.xml,doc/examples/color-table-tcl: Changing old table.rvt
    example in a more enticing colorful table generation

2014-06-03 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/intro.xml: Acknowledgements reworded into a list
    * doc/images/: logo has now a transparent background, navigation icons colors turned into a greenish tint
    * rivet.xsl,rivet.css: new style based on a green gamut to make pages visually different from Rivet 2.1

2014-06-02 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: tagging this code as 2.2.0
    * src/rivet.h,src/rivetcmds/rivetCore.c: macro CHECK_REQUEST_REC moved from rivetCore.c to rivet.h
    * doc/xml/internals.xml: New section documenting how to extend mod_rivet with new commands written in C

2014-05-22 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/aida.sql: redifining responsability of class Aida (not to be officially released)

2014-04-17 Massimo Manghi <mxmanghi@apache.org>
    * src/: reintegrating modularization branch. Now every subsystem mod_rivet is made of (module, 
    channel, parser, commands, request multipart handling) can be developed separately
    * src/rivetcmds/rivetCore.c: reintroduced handling of the -string argument that disappeared 